tests/snapshots/render_snapshots__80x24_hybrid.snap
---
source: tests/render_snapshots.rs
expression: "render_with_hourly_mode_to_string(80, 24, 61, HourlyViewMode::Hybrid)"
---
┌Current · L cities · S settings · ? help──────────────────────────────────────┐
│ 7°C                                                                          │
│ Slight rain                                                                  │
│ H:9°  L:3°                                                                   │
│ Stockholm, Stockholm, Sweden                                                 │
│ Now action: keep precipitation gear ready                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌▶ Hourly · Hybrid · Thu 12 Feb────────────────────────────────────────────────┐
│Temp  ▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▆▆▆▆▆▇▇▇▇▇▇▇▇▇▇▇█  5..11C │
│Precip▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅  0.4..1.5mm/h │
│Time             12                  ·                 18                   · │
│                                [ Thu 12 Feb ]                                │
│Morning             Noon                Evening            Night              │
│☂ 5-6°              ☂ 6-9°              ☂ 9-11°            ☂ --               │
│0.9mm 35%           5.1mm 35%           5.4mm 35%          0.0mm --           │
└──────────────────────────────────────────────────────────────────────────────┘
┌7-Day Forecast────────────────────────────────────────────────────────────────┐
│Day  Wx  Low   Range                    High                                  │
│Thu  ☂   1°    ██████████████·········· 8°                                    │
│Fri  ☂   1°    ·███████████████········ 9°                                    │
│Sat  ☂   2°    ·█████████████████······ 10°                                   │
│Sun  ☂   2°    ··█████████████████····· 11°                                   │
└──────────────────────────────────────────────────────────────────────────────┘
R Refresh  V View  L Cities  S Settings  <-/-> Scroll  Q Quit  : Command  F1/? H
